# TheOrb

./: .hgignore
gatherer/: CMakeLists.txt
gatherer/sources/: CMakeLists.txt  main.cpp
gatherer/sources/common/: commoditymsg.cpp  commoditymsg.h  commondefs.cpp  commondefs.h  concurrentqueue.h  json_helpers.cpp  json_helpers.h  msg_common.h  schemadefs.h  spaceobjects.cpp  spaceobjects.h
gatherer/sources/dbmanager/: dbmanager.cpp  dbmanager.h  idbprovider.cpp  idbprovider.h  memprovider.cpp  memprovider.h
gatherer/sources/dbmanager/postgres/: pgconnection.cpp  pgconnection.h  pgconnpool.cpp  pgconnpool.h  pghelpers.cpp  pghelpers.h  pgprovider.cpp  pgprovider.h  pgquery.cpp  pgquery.h
gatherer/sources/edsmfetcher/: edsmdefs.h  psysfetcher.cpp  psysfetcher.h  psysparser.cpp  psysparser.h
gatherer/sources/logger/: slogger.cpp  slogger.h
gatherer/sources/msgparser/: commodityparser.cpp  commodityparser.h  eddndefs.h  msgparser.cpp  msgparser.h  msgqueue.cpp  msgqueue.h
gatherer/sources/server/: eddnclient.cpp  eddnclient.h  servercore.cpp  servercore.h  srvconfig.cpp  srvconfig.h
gatherer/sql/: PostgreSQL.sql
